added Spark support